--- a/UnitTestCalculator/UnitTestCalculator.csproj
+++ b/UnitTestCalculator/UnitTestCalculator.csproj
@@ -49,8 +49,13 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestOperations\UnitTestDivision.cs" />
+    <Compile Include="UnitTestOperations\UnitTestMultiply.cs" />
+    <Compile Include="UnitTestOperations\UnitTestPow.cs" />
+    <Compile Include="UnitTestOperations\UnitTestSqrt.cs" />
+    <Compile Include="UnitTestOperations\UnitTestSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestOperations\UnitTestSubstract.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
