--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D496AA6C-DF56-4653-846D-C1060E76740E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>Calculator</RootNamespace>
+    <AssemblyName>Calculator</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,7 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculator.cs" />
+    <Compile Include="DisplayNumber.cs" />
     <Compile Include="Operations\Division.cs" />
+    <Compile Include="Operations\Equals.cs" />
+    <Compile Include="Operations\IOperations.cs" />
     <Compile Include="Operations\Multiply.cs" />
     <Compile Include="Operations\Pow.cs" />
     <Compile Include="Operations\Sqrt.cs" />
@@ -52,6 +55,7 @@
     <Compile Include="Operations\Sum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
