--- a/UnitTestCalculator/UnitTestCalculator.csproj
+++ b/UnitTestCalculator/UnitTestCalculator.csproj
@@ -49,8 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTestOperations\TestDisplayNumber.cs" />
+    <Compile Include="UnitTestDisplayNumber\TestDisplayNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestTextBoxResult\TestTextBoxResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
