feat: Add methods for UI

--- a/CalculatorUI/CalculatorUI.csproj
+++ b/CalculatorUI/CalculatorUI.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Calculator\Calculator.csproj">
+      <Project>{d496aa6c-df56-4653-846d-c1060e76740e}</Project>
+      <Name>Calculator</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
