--- a/UnitTestCalculator/UnitTestCalculator.csproj
+++ b/UnitTestCalculator/UnitTestCalculator.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnitTestCalculator\TestCalculator.cs" />
     <Compile Include="UnitTestDisplayNumber\TestDisplayNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestTextBoxResult\TestTextBoxResult.cs" />
