--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Operations\Sum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextBoxResult.cs" />
+    <Compile Include="ResultNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
