--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Operations\Sqrt.cs" />
     <Compile Include="Operations\Substract.cs" />
     <Compile Include="Operations\Sum.cs" />
+    <Compile Include="Operations\Undefined.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultNumber.cs" />
